--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,10 @@
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "module": "ESNext",
     "skipLibCheck": true,
-
+    "baseUrl": ".",
+    "paths": {
+      "components/*": ["./src/components/*"]
+    },
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
@@ -20,5 +23,6 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
+
   "references": [{ "path": "./tsconfig.node.json" }]
 }
